--- a/css/login.css
+++ b/css/login.css
@@ -1,15 +1,15 @@
 *{padding: 0px;margin: 0px;}
 html,body{width: 100%;height: 100%;}
 body{
-	/*µ÷ÓÃÑ­»·²¥·ÅµÄº¯Êı*/
+	/*è°ƒç”¨å¾ªç¯æ’­æ”¾çš„å‡½æ•°*/
     animation-name:myfirst;
-    /*Ò»´ÎÑ­»·³ÖĞøÊ±³¤*/
+    /*ä¸€æ¬¡å¾ªç¯æŒç»­æ—¶é•¿*/
     animation-duration: 10s;
-    /*Æô¶¯Ê±¼ä*/
+    /*å¯åŠ¨æ—¶é—´*/
     animation-delay:0s;
-    /*Ñ­»·´ÎÊı*/
+    /*å¾ªç¯æ¬¡æ•°*/
     animation-iteration-count:infinite;
-    /*¶¯»­¿ªÊ¼ÔËĞĞ*/
+    /*åŠ¨ç”»å¼€å§‹è¿è¡Œ*/
     animation-play-state:running;
 }
 @keyframes myfirst
@@ -25,7 +25,7 @@ body{
     0%   {background:url("images/timg.jpg") center fixed no-repeat;background-size: cover;}
 }
 .form{background: rgba(255,255,255,0.5);width:500px;margin:180px auto;}
-/*ÒõÓ°*/
+/*é˜´å½±*/
 .fa{display: inline-block;top: 27px;left: 6px;position: relative;color: #ccc;}
 input[type="text"],input[type="password"]{padding-left:26px;}
 button[type="submit"],button[type="reset"]{width: 100px;}
